# recap-lerobot

./: .gitignore  README.md  pyproject.toml
src/lerobot_policy_recap/: __init__.py
src/lerobot_policy_recap/configs/: rl_train.py
src/lerobot_policy_recap/policies/recap/: configuration_recap_pi.py  modeling_recap_base.py  modeling_recap_pi.py  processor_recap_pi.py
src/lerobot_policy_recap/processor/: __init__.py  converters_patch.py  return_normalizer.py
src/lerobot_policy_recap/reinforcement_loop/builds/benchmarking/: benchmark_policy.py
src/lerobot_policy_recap/reinforcement_loop/builds/data_collection/: record_interaction_dataset.py
src/lerobot_policy_recap/reinforcement_loop/builds/train/: train_recap.py
src/lerobot_policy_recap/reinforcement_loop/common/buffers/: offline_buffer.py
src/lerobot_policy_recap/reinforcement_loop/common/critics/: __init__.py  critic_configs.py  critic_ensemble.py  critics.py
src/lerobot_policy_recap/reinforcement_loop/common/encoders/: __init__.py  encoder_configs.py  gemma3_encoder.py  siglip_encoder.py
src/lerobot_policy_recap/reinforcement_loop/common/logger/: __init__.py  base.py  composite.py  console_backend.py  factory.py  wandb_backend.py
src/lerobot_policy_recap/reinforcement_loop/common/reward_models/: base_reward.py  common_rewards.py  reward_factory.py
src/lerobot_policy_recap/reinforcement_loop/common/utils/: utils.py
src/lerobot_policy_recap/reinforcement_loop/learning_modules/: rl_objects.py
src/lerobot_policy_recap/reinforcement_loop/learning_modules/data_collectors/: interaction_collector.py  (+1 more)
(+8 files in other folders)
